--- a/index.css
+++ b/index.css
@@ -8,13 +8,15 @@
 .container {
     border: 5px solid red;
     min-height: 100vh;
+    width: 100%;
     background-image: url(./comdesk.avif);
     background-size: contain;
 }
 
-.header {
+header {
     border: 5px solid black;
     min-height: 20vh;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -22,13 +24,14 @@
 }
 
 .name {
-    margin-left: 210px;
+    margin-left: 110px;
     font-size: 20px;
+    width: 100%;
 }
 
 
 .nav {
-    margin-right: 210px;
+    margin-right: 110px;
 }
 
 .link {
@@ -55,6 +58,7 @@
 .main-content {
     border: 5px solid purple;
     min-height: 70vh;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding-top: 50px;
@@ -64,8 +68,9 @@
 
 .text {
     /* border: 3px solid red; */
-    margin-left: 210px;
+    margin-left: 110px;
     margin-right: 20px;
+    flex: 1;
     animation-name: nifemi;
     animation-duration: 4s;
     animation-timing-function: ease;
@@ -98,7 +103,7 @@
 }
 
 .icon {
-    /* border: 3px solid red; */
+    border: 3px solid red;
     display: flex;
     flex-direction: column;
     font-size: 100px;
@@ -106,13 +111,15 @@
 
 .image {
     border: 3px solid black;
-    margin-right: 210px;
+    margin-right: 110px;
+    width: 100%;
+    flex: 1;
 }
 
 .me {
-    border-radius: 50% 20px;
-    width: 500px;
-    height: 500px;
+    border-radius: 100% 50%;
+    width: 100%;
+    height: 400px;
     animation-name: nife;
     animation-duration: 4s;
     animation-timing-function: ease;
@@ -146,7 +153,7 @@ footer {
 }
 
 .font {
-    margin-left: 210px;
+    margin-left: 110px;
     font-size: 35px;
 }
 
@@ -159,7 +166,7 @@ footer {
 }
 
 .copy {
-    margin-right: 210px;
+    margin-right: 110px;
 } 
 
 
@@ -170,17 +177,17 @@ footer {
 /*CONTACT*/
 .left {
     /* border: 3px solid red; */
-    margin-left: 210px;
+    margin-left: 110px;
 }
 
 .shape {
     border: 3px solid brown;
     box-shadow: 2px 3px 8px brown;
-    border-radius: 50% 20px;
-    margin-top: 40px;
+    /* border-radius: 50% 20px; */
+    margin-top: 200px;
     padding: 50px;
-    height: 450px;
-    width: 450px;
+    /* height: 450px; */
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -190,7 +197,7 @@ footer {
 
 .right {
     /* border: 3px solid red; */
-    margin-right: 240px;
+    margin-right: 140px;
     padding: 20px;
     width: 35%;
 }
@@ -240,8 +247,8 @@ textarea {
 .pro-content {
     border: 3px solid blue;
     padding: 20px;
-    margin-left: 210px;
-    margin-right: 240px;
+    margin-left: 110px;
+    margin-right: 140px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -329,7 +336,7 @@ textarea {
     }
     
     .link li a {
-        font-size: 20px;
+        font-size: 16px;
     }
     
     .text {
@@ -349,11 +356,12 @@ textarea {
     .image {
         border: 3px solid black;
         margin-right: 40px;
+        width: 100%;
     }
     
     .me {
-        width: 350px;
-        height: 350px;
+        width: 100%;
+        /* height: 500px; */
     }
 
     .font {
@@ -398,7 +406,7 @@ textarea {
 
 
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
     .name {
         margin-left: 20px;
         font-size: 15px;
@@ -419,7 +427,7 @@ textarea {
     }
     
     .link li a {
-        font-size: 10px;
+        font-size: 16px;
     }
 
     .main-content {
@@ -427,8 +435,7 @@ textarea {
     }
     
     .text {
-        margin-left: 20px;
-        margin-right: 20px;
+        margin: 40px 20px;
         animation: none;
         order: 2;
     }
@@ -447,14 +454,12 @@ textarea {
     }
      
     .image {
-        margin-right: 20px;
-        margin-left: 20px;
+        width: 100%;
     }
     
     .me {
-        border-radius: 50% 20px;
-        width: 450px;
-        height: 450px;
+        border-radius: 100% 50%;
+        width: 100%;
         animation: none;
         order: 1;
     }
@@ -488,36 +493,41 @@ textarea {
     
     .left {
         margin-left: 20px;
+        order: 2;
     }
     
     .shape {
-        height: 450px;
-        width: 450px;
-        font-size: 25px;
+        width: 90%;
+        font-size: 19px;
+        margin-top: 20px;
+        background-color: black;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
     
     .right {
         border: 3px solid rebeccapurple;
         margin-right: 20px;
         margin-left: 20px;
+        margin-top: 30px;
         padding: 20px;
         width: 90%;
+        order: 1;
     }
     
     /*PROJECT*/
     .pro-content {
         border: 3px solid blue;
-        padding: 20px;
         margin-left: 20px;
         margin-right: 20px;
         width: 90%;
         display: flex;
-        flex-wrap: wrap;
         flex-direction: column;
     }
 
     .pro-content p {
-        font-size: 16px;
+        font-size: 20px;
+        text-align: center;
+        margin-top: 10px;
     }
     
     .first {
@@ -538,7 +548,16 @@ textarea {
 
     .first, .second, .third, .fourth {
         width: 100%;
+        height: 90vh;
     }
+
+    .bon {
+        padding: 20px;
+        width: 50%;
+        margin: 10px 25px;
+    }
+
+
 }
 
 
