--- a/index.css
+++ b/index.css
@@ -117,9 +117,9 @@ header {
 }
 
 .me {
-    border-radius: 100% 50%;
+    border-radius: 10% 05%;
     width: 100%;
-    height: 400px;
+    /* height: 400px; */
     animation-name: nife;
     animation-duration: 4s;
     animation-timing-function: ease;
@@ -360,6 +360,7 @@ textarea {
     }
     
     .me {
+        border-radius: 10% 05%;
         width: 100%;
         /* height: 500px; */
     }
@@ -458,7 +459,7 @@ textarea {
     }
     
     .me {
-        border-radius: 100% 50%;
+        border-radius: 10% 05%;
         width: 100%;
         animation: none;
         order: 1;
